--- a/Projet/monappli/templates/index.tmpl
+++ b/Projet/monappli/templates/index.tmpl
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Le titre</title>
-    <style>
-      p, div.bouton { background: rgba(240, 240, 240, .5) ; border: solid 1px ; padding: 10px ; width: 40em ; font-style: italic ; }
-div.envoi { text-align: center ;  width: 40em ; }
-div div {  margin-left: 4em ; font-style: normal ; }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Résultat de la requête</title>
 </head>
 <body>
-    <h1>Recherche d'un employé</h1>
+    <h1>Bienvenue</h1>
 
-    <form action="{% url 'search_employee3' %}" method="post">
-        {% csrf_token %}
+    <a href="http://127.0.0.1:8000/monappli/requete1" target="_blank">requete 1</a>
 
-        <p>
-            Employé recherché :
-            <select name="employe">
-            {% for employee in employees %}
-                <option value="{{ employee.id }}">{{ employee.nom }} {{employee.prenom}}</option>
-            {% endfor %}
-            </select>
-        </p>
+    <a href="http://127.0.0.1:8000/monappli/requete2" target="_blank">requete 2</a>
 
-    <div class="envoi"><input type="submit">
+    <a href="http://127.0.0.1:8000/monappli/requete3" target="_blank">requete 3</a>
 
-    </div>
-</form>
+    <a href="http://127.0.0.1:8000/monappli/request4" target="_blank">requete 4</a>
+
+    <a href="http://127.0.0.1:8000/monappli/requete5" target="_blank">requete 5</a>
+
+
+</a>
 </body>
 </html>
+
 
