--- a/Projet/monappli/templates/requete4.tmpl
+++ b/Projet/monappli/templates/requete4.tmpl
@@ -23,6 +23,8 @@ div div {  margin-left: 4em ; font-style: normal ; }
             <input type="number" name="seuil">
         </p>
 
+        <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
+
     <div class="envoi"><input type="submit">
 
     </div>
