--- a/Projet/monappli/templates/employeXmail.tmpl
+++ b/Projet/monappli/templates/employeXmail.tmpl
@@ -1,21 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Résultat de la requête</title>
+
+<style>
+    a {
+    color: white;
+}
+
+/* Réinitialisation des marges par défaut de la page */
+body, html {
+    margin: 0;
+    padding: 0;
+    /* centrer le texte */
+    text-align: center;
+    font-size: 20px;
+
+}
+
+
+        /* Style pour la bandeau de couleur */
+        .bande-couleur {
+            background-color: #272224; /* Couleur de fond */
+            width: 100%; /* Largeur de la bande */
+            height: 50px; /* Hauteur de la bande */
+            padding: 10px; /* Espacement interne pour un peu d'espace autour du contenu */
+            text-align: center; /* Centrage du texte à l'intérieur de la bande */
+            font-size: 24px; /* Taille de police */
+
+            font-weight: bold; /* Gras */
+            font-family: "Sans-serif"; /* Police de caractères */
+            color: white; /* Couleur du texte */
+        }
+
+        /* Style pour le bandeau vertical */
+        .bandeau-vertical1 {
+            background-color: #634E3D; /* Couleur de fond */
+            width: 150px; /* Largeur du bandeau */
+            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
+            position: fixed; /* Position fixe pour rester visible lors du défilement */
+            top: 0; /* Alignement en haut */
+            left: 0; /* Alignement à gauche */
+            text-align: center; /* Centrage du texte */
+            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
+            font-size: 20px; /* Taille de police */
+            font-weight: bold; /* Gras */
+            font-family: "Sans-serif"; /* Police de caractères */
+            /* Couleur du texte */
+            color: white;
+        }
+        /* Style pour le bandeau vertical */
+        .bandeau-vertical2 {
+            background-color: #634E3D; /* Couleur de fond */
+            width: 150px; /* Largeur du bandeau */
+            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
+            position: fixed; /* Position fixe pour rester visible lors du défilement */
+            top: 0; /* Alignement en haut */
+            right: 0; /* Alignement à droite */
+            text-align: center; /* Centrage du texte */
+            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
+            font-size: 20px; /* Taille de police */
+            font-weight: bold; /* Gras */
+            font-family: "Sans-serif"; /* Police de caractères */
+            /* Couleur du texte */
+            color: white;
+        }
+
+      p, div.bouton { background: rgba(240, 240, 240, .5) ;
+       border: solid 1px ;
+       padding: 15px ;
+       width: 40em ;
+       font-style: italic ;
+       margin-left: 19em ;
+       font-size: 18px;
+
+         }
+
+    div.envoi { text-align: center ;
+    width: 40em ;
+    margin-left: 40em ;
+    }
+
+    h1 { font-size: 35px ;
+    font-weight: bold ;
+    text-decoration: underline;
+    }
+
+
+div.texte { font-size: 20px ;
+    margin-left: 170px ;
+    margin-right: 160px ;
+    text-align: left;
+    }
+
+
+table.mon_tableau  {
+        border-collapse: collapse;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    table.mon_tableau td {
+       border: 2px solid #272224;
+       padding: 0.3em;
+       font-family: "Sans-serif";
+       font-size: 20px;
+
+    }
+    table.mon_tableau tr:nth-child(even)  {background: #F9E6D6  }
+    table.mon_tableau tr:nth-child(odd) {background: #F9E6D6 }
+
+
+    </style> <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Nom', 'Nombre de mails envoyés'],
+          {% for item in liste1 %}
+          ['{{ item.nom }} {{ item.prenom }}', {{ item.nb_mails_envoyes }}],
+          {% endfor %}
+        ]);
+
+        var options = {
+    title: 'Country Populations',
+    legend: { position: 'none' },
+    colors: ['green'],
+  };
+
+        var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
+
+
+ <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['bar']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Nom', 'Nombre de mails reçus'],
+            {% for item in liste22 %}
+            ['{{ item.nom }} {{ item.prenom }}', {{ item.nb_mails_recu }}],
+            {% endfor %}
+
+        ])
+
+        var options = {
+          chart: {
+            title: 'Company Performance',
+            subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+          }
+        };
+
+        var chart = new google.charts.Bar(document.getElementById('columnchart_material'));
+
+        chart.draw(data, google.charts.Bar.convertOptions(options));
+      }
+    </script>
+<meta charset="utf-8">
+ <title>Attributs d’un employé</title>
 </head>
-<body>
-    <h1>Résultat de la requête</h1>
+<body style="background-color:white;">
+
+
+<div class="bande-couleur">
+    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>  |
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a> |
+    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a> |
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a> |
+    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a> |
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a> |
+    <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
+</div>
+    <h1>Employés ayant envoyé ou reçu plus de {{ seuil }} mails</h1>
+    <br>
     <p>Ma date du début : {{ date_debut }}</p>
     <p>Ma date de fin : {{ date_fin }}</p>
     <p>Mon seuil : {{ seuil }}</p>
-    nb de mail envoyé :
-    <p>Ma liste de couple : {{ liste1 }}</p>
 
-    nb de mail reçu :
-    <p>Ma liste de couple : {{ liste2 }}</p>
+    <br>
 
+<div class="texte">
+    Voici le nombre de mails envoyés et reçus par chaque employé entre le {{ date_debut }} et le {{ date_fin }}.
+    <br>
+    Les employés ayant envoyé plus de {{ seuil }} mails sont affichés dans le tableau de gauche,
+    tandis que ceux ayant reçu plus de {{ seuil }} mails sont affichés dans le tableau de droite.
+</div>
+
+    <br>
+
+<div style="display: flex;">
+<div style="flex: 1;">
+
+    <table class="mon_tableau" style="margin-right: 40px;">
+    <tr>
+    <td BGCOLOR="#634E3D"> Nom</td>
+    <td BGCOLOR="#634E3D"> Prénom</td>
+    <td BGCOLOR="#634E3D"> Nombre de mails</td>
+    </tr>
+    {% for item in liste1 %}
+    <tr>
+    <td> {{ item.nom }}</td>
+   <td> {{ item.prenom }}</td>
+    <td> {{ item.nb_mails_envoyes }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+    </div>
+<br>
+<br>
+
+
+<div style="flex: 1;">
+    <table class="mon_tableau" style="margin-left: 40px;">
+    <tr>
+    <td BGCOLOR="#634E3D"> Nom</td>
+    <td BGCOLOR="#634E3D"> Prénom</td>
+    <td BGCOLOR="#634E3D"> Nombre de mails</td>
+    </tr>
+    {% for item in liste2 %}
+    <tr>
+    <td> {{ item.nom }}</td>
+   <td> {{ item.prenom }}</td>
+    <td> {{ item.nb_mails_recu }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+    </div>
+</div>
+
+
+<div id="columnchart_material" style="width: 800px; height: 500px;"></div>
 
 </body>
 </html>
