--- a/Projet/monappli/templates/requete1.tmpl
+++ b/Projet/monappli/templates/requete1.tmpl
@@ -1,31 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Le titre</title>
-    <style>
-      p, div.bouton { background: rgba(240, 240, 240, .5) ; border: solid 1px ; padding: 10px ; width: 40em ; font-style: italic ; }
-div.envoi { text-align: center ;  width: 40em ; }
-div div {  margin-left: 4em ; font-style: normal ; }
+ <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Dinosaur', 'Length'],
+          ['Acrocanthosaurus (top-spined lizard)', 12.2],
+          ['Albertosaurus (Alberta lizard)', 9.1],
+          ['Allosaurus (other lizard)', 12.2],
+          ['Apatosaurus (deceptive lizard)', 22.9],
+          ['Archaeopteryx (ancient wing)', 0.9],
+          ['Argentinosaurus (Argentina lizard)', 36.6],
+          ['Baryonyx (heavy claws)', 9.1],
+          ['Brachiosaurus (arm lizard)', 30.5],
+          ['Ceratosaurus (horned lizard)', 6.1],
+          ['Coelophysis (hollow form)', 2.7],
+          ['Compsognathus (elegant jaw)', 0.9],
+          ['Deinonychus (terrible claw)', 2.7],
+          ['Diplodocus (double beam)', 27.1],
+          ['Dromicelomimus (emu mimic)', 3.4],
+          ['Gallimimus (fowl mimic)', 5.5],
+          ['Mamenchisaurus (Mamenchi lizard)', 21.0],
+          ['Megalosaurus (big lizard)', 7.9],
+          ['Microvenator (small hunter)', 1.2],
+          ['Ornithomimus (bird mimic)', 4.6],
+          ['Oviraptor (egg robber)', 1.5],
+          ['Plateosaurus (flat lizard)', 7.9],
+          ['Sauronithoides (narrow-clawed lizard)', 2.0],
+          ['Seismosaurus (tremor lizard)', 45.7],
+          ['Spinosaurus (spiny lizard)', 12.2],
+          ['Supersaurus (super lizard)', 30.5],
+          ['Tyrannosaurus (tyrant lizard)', 15.2],
+          ['Ultrasaurus (ultra lizard)', 30.5],
+          ['Velociraptor (swift robber)', 1.8]]);
+
+        var options = {
+    title: 'Country Populations',
+    legend: { position: 'none' },
+    colors: ['green'],
+  };
+
+        var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
+
+<style>
+    a {
+    color: white;
+}
+
+/* Réinitialisation des marges par défaut de la page */
+body, html {
+    margin: 0;
+    padding: 0;
+    /* centrer le texte */
+    text-align: center;
+    font-size: 20px;
+
+}
+
+/* Style pour les images */
+img {
+    display: block;
+    width: 5%;
+    height: 10%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
+
+
+
+        /* Style pour la bandeau de couleur */
+        .bande-couleur {
+            display: block;
+    width: 100%;
+    position: relative;
+    background-size: cover ;
+    background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+    padding: 30px 0px;
+        }
+
+        /* Style pour le bandeau vertical */
+        .bandeau-vertical1 {
+            background-color: #634E3D; /* Couleur de fond */
+            width: 150px; /* Largeur du bandeau */
+            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
+            position: fixed; /* Position fixe pour rester visible lors du défilement */
+            top: 0; /* Alignement en haut */
+            left: 0; /* Alignement à gauche */
+            text-align: center; /* Centrage du texte */
+            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
+            font-size: 20px; /* Taille de police */
+            font-weight: bold; /* Gras */
+            font-family: "Sans-serif"; /* Police de caractères */
+            /* Couleur du texte */
+            color: white;
+        }
+        /* Style pour le bandeau vertical */
+        .bandeau-vertical2 {
+            background-color: #634E3D; /* Couleur de fond */
+            width: 150px; /* Largeur du bandeau */
+            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
+            position: fixed; /* Position fixe pour rester visible lors du défilement */
+            top: 0; /* Alignement en haut */
+            right: 0; /* Alignement à droite */
+            text-align: center; /* Centrage du texte */
+            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
+            font-size: 20px; /* Taille de police */
+            font-weight: bold; /* Gras */
+            font-family: "Sans-serif"; /* Police de caractères */
+            /* Couleur du texte */
+            color: white;
+        }
+
+      p { background: rgba(240, 240, 240, .5) ;
+       border: solid 1px ;
+       padding: 15px ;
+       width: 40em ;
+       font-style: italic ;
+       margin-left: 19em ;
+       font-size: 18px;
+
+         }
+
+    div.envoi { text-align: center ;
+
+    }
+
+    h1 { font-size: 35px ;
+    font-weight: bold ;
+    text-decoration: underline;
+    }
+
+
+div.texte { font-size: 20px ;
+    margin-left: 170px ;
+    margin-right: 160px ;
+    text-align: left;
+    }
+
+#graph
+{
+    position:relative;
+    width:660px;
+    height:216px;
+    margin:8px;
+    padding:0;
+}
+#graph ul
+{
+    position:absolute;
+    top:0;
+    left:32px;
+    width:600px;
+    height:200px;
+    border-left:1px solid black;
+    border-bottom:1px solid black;
+}
+
+
+#graph li
+{
+   position:absolute;
+   list-style:none;
+   background:lightblue;
+   width:40px;
+   text-align:center;
+   border:1px solid black;
+   visibility: hidden;
+}
+
+
     </style>
+
+<meta charset="utf-8">
+ <title>Attributs d’un employé</title>
 </head>
-<body>
-    <h1> attributs d’un employé </h1>
+<body style="background-color:white;">
+
+<!-- Bandeau vertical -->
+
+<!-- Bandeau de couleur -->
+
+
+<div class="bande-couleur">
+
+    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
+    <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
+</div>
+
+<img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
+
+
+
+    <h1 > Attributs d’un employé </h1>
     <form action="{% url 'attributs_employes' %}" method="post">
         {% csrf_token %}
+
+    <br>
+
+
+        <div class="texte">
+            Cette page a été conçue pour faciliter la recherche des attributs d'un employé de notre entreprise.
+            Vous pouvez simplement saisir le nom et le prénom de l'employé ou son adresse e-mail dans le champ de recherche,
+             et notre système récupérera automatiquement les attributs associés à cet employé.
+        </div>
+
+        <br>
+        <br>
+        <br>
+
+        <div>
+            Rentrer le Nom et Prénom d'un employé pour obtenir ses attributs
+        </div>
+
+        <br>
+
 
         <p>
             nom de l'employé:
             <input type="text" name="nom_employe">
             prénom de l'employé:
             <input type="text" name="prenom_employe">
-            adresse mail de l'employé:
+
+        </p>
+        <br>
+        <br>
+
+        <div> Rentrer l'adresse mail d'un employé pour obtenir ses attributs </div>
+
+<br>
+
+        <p>
+        adresse mail de l'employé:
             <input type="text" name="adresse_employe">
         </p>
+<br>
 
-    <div class="envoi"><input type="submit">
-
+    <div class="envoi"><input type="submit" value="Rechercher"></div>
     </div>
+
+
+<div id="chart_div" style="width: 900px; height: 500px;"></div>
+
 </form>
 </body>
 </html>
