--- a/Projet/monappli/templates/List_comu_empl.tmpl
+++ b/Projet/monappli/templates/List_comu_empl.tmpl
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 <style>
-    a {
+       a {
     color: white;
+    text-decoration: none;
+    padding: 10px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
 }
 
 /* Réinitialisation des marges par défaut de la page */
@@ -16,117 +24,238 @@ body, html {
 
 }
 
+/* Style pour les images */
+img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
+
+
 
         /* Style pour la bandeau de couleur */
         .bande-couleur {
-            background-color: #272224; /* Couleur de fond */
-            width: 100%; /* Largeur de la bande */
-            height: 50px; /* Hauteur de la bande */
-            padding: 10px; /* Espacement interne pour un peu d'espace autour du contenu */
-            text-align: center; /* Centrage du texte à l'intérieur de la bande */
-            font-size: 24px; /* Taille de police */
+            display: block;
+    width: 100%;
+    position: relative;
+    background-size: cover ;
+    background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+    padding: 30px 0px;
+        }
+    .bande-couleur img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
 
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
+
+     .bande-bas {
+
+    margin: 0;
+
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+
+            align-items: center;
+            padding: 30px 0px; /* Ajustez le rembourrage si nécessaire */
+            background-size: cover;
+            background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
             color: white; /* Couleur du texte */
+            font-family: Arial, sans-serif; /* Police du texte */
         }
 
-        /* Style pour le bandeau vertical */
-        .bandeau-vertical1 {
-            background-color: #634E3D; /* Couleur de fond */
-            width: 150px; /* Largeur du bandeau */
-            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
-            position: fixed; /* Position fixe pour rester visible lors du défilement */
-            top: 0; /* Alignement en haut */
-            left: 0; /* Alignement à gauche */
-            text-align: center; /* Centrage du texte */
-            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
-            font-size: 20px; /* Taille de police */
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
-            /* Couleur du texte */
-            color: white;
-        }
-        /* Style pour le bandeau vertical */
-        .bandeau-vertical2 {
-            background-color: #634E3D; /* Couleur de fond */
-            width: 150px; /* Largeur du bandeau */
-            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
-            position: fixed; /* Position fixe pour rester visible lors du défilement */
-            top: 0; /* Alignement en haut */
-            right: 0; /* Alignement à droite */
-            text-align: center; /* Centrage du texte */
-            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
-            font-size: 20px; /* Taille de police */
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
-            /* Couleur du texte */
-            color: white;
+        .bande-bas-texte {
+    flex-grow: 1; /* Permet au texte de remplir l'espace disponible */
+}
+
+        /* Style pour l'image en bas à droite */
+        .bande-bas img {
+                width: 5%; /* Ajustez la largeur de l'image si nécessaire */
+    height: auto; /* Ajustez la hauteur de l'image si nécessaire */
+    margin-left: auto; /* Pousse l'image vers la droite */
         }
 
-      p, div.bouton { background: rgba(240, 240, 240, .5) ;
-       border: solid 1px ;
+
+
+
+      p { background: rgba(240, 240, 240, .5) ;
        padding: 15px ;
        width: 40em ;
        font-style: italic ;
+       /* texte en gras */
+         font-weight: bold ;
        margin-left: 19em ;
        font-size: 18px;
+       background-image: url("https://img1.wallspic.com/crops/3/4/1/7/5/157143/157143-motif_vert_bleu-bleu_vert-green-la_purete_de_la_couleur-de_teintes_et_de_nuances-1920x1080.jpg");
+       background-size: cover; /* Pour ajuster la taille de l'image de fond */
+       background-position: center;
+       border-radius: 10px;
+       color: White;
+
 
          }
 
     div.envoi { text-align: center ;
-    width: 40em ;
-    margin-left: 40em ;
+
     }
 
     h1 { font-size: 35px ;
     font-weight: bold ;
-    text-decoration: underline;
     }
 
 
-div.texte { font-size: 20px ;
+div.texte { font-size: 22px ;
     margin-left: 170px ;
     margin-right: 160px ;
     text-align: left;
     }
 
 
+table.mon_tableau  {
+        border-collapse: collapse;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    table.mon_tableau td {
+       border: 2px solid black;
+       padding: 0.3em;
+       font-family: "Sans-serif";
+       font-size: 20px;
+
+    }
+
+
     </style>
 
 <meta charset="utf-8">
- <title>Attributs d’un employé</title>
+ <title>liste communication</title>
 </head>
-<body style="background-color:#F9E6D6;">
+<body style="background-color:white;">
 
-<!-- Bandeau vertical -->
-<div class="bandeau-vertical1"></div>
-<div class="bandeau-vertical2"></div>
 
 <div class="bande-couleur">
-    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>  |
-    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a> |
-    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a> |
+    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
     <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
 </div>
 
+<img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
+    <br>
     <h1>Employé ayant communiqué avec {{employe_nom }} {{ employe_prenom }}</h1>
+    <br>
     <p>Ma date du début : {{ date_debut }}</p>
     <p>Ma date de fin : {{ date_fin }}</p>
     <p> Mon employé : {{ employe_nom }} {{ employe_prenom }}</p>
-    nb de mail envoyé :
-
-    <p>Ma liste de couple : {{ liste1 }}</p>
+    <br>
 
 
+<div class="texte">
+L'histogramme ci-dessous représente le nombre de mails envoyés/reçus pour les 10 employés ayant le plus communiqué avec {{ employe_nom }} {{ employe_prenom }}, dans la période du {{ date_debut }} au {{ date_fin }}.
+</div>
+    <br>
+    <div class="col-md-6" style="margin-left: 15%;">
+        {{disp|safe}}
+    </div>
+
+    <br>
 
 
-    nb de mail reçu :
-    <p>Ma liste de couple : {{ liste2 }}</p>
+<hr class="detail-separator" style="max-width: 600px; border-color : rgba(0, 0, 0, 1);">
+<br>
+<div class="texte">
+    Les tableaux ci-dessous représentent le nombre de mails envoyés/reçus pour tous les employés ayant communiqués avec {{ employe_nom }} {{ employe_prenom }}, dans la période du {{ date_debut }} au {{ date_fin }}.
+</div>
+<br>
 
+<table class="mon_tableau">
+        <tr>
+            <td> Nom</td>
+            <td> Prénom</td>
+            <td>Nombre de mails</td>
+        </tr>
+    {% for item in liste3 %}
+    <tr>
+    <td> {{ item.nom}}</td>
+    <td> {{ item.prenom }}</td>
+    <td> {{ item.nb_mails }}</td>
+    </tr>
+        {% endfor %}
+</table>
+<br>
+
+<br>
+
+<hr class="detail-separator" style="max-width: 600px; border-color : rgba(0, 0, 0, 1);">
+<br>
+
+<div class="texte">
+    Nous pouvons regarder plus en detail les mails envoyés et reçus par les employés ayant communiqué avec {{ employe_nom }} {{ employe_prenom }}.
+    Le premier tableau représente les mails envoyés par ces employés, et le deuxième tableau représente les mails reçus par ces employés.
+</div>
+<br>
+
+
+<div style="display: flex;">
+<div style="flex: 1;">
+
+    <table class="mon_tableau" style="margin-right: 40px;">
+    <tr>
+    <td > Nom</td>
+    <td > Prénom</td>
+    <td > Nombre de mails</td>
+    </tr>
+    {% for item in liste1 %}
+    <tr>
+    <td> {{ item.nom }}</td>
+   <td> {{ item.prenom }}</td>
+    <td> {{ item.nb_mails }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+    </div>
+<br>
+<br>
+
+
+<div style="flex: 1;">
+    <table class="mon_tableau" style="margin-left: 40px;">
+    <tr>
+    <td> Nom</td>
+    <td> Prénom</td>
+    <td> Nombre de mails</td>
+    </tr>
+    {% for item in liste2 %}
+    <tr>
+    <td> {{ item.nom }}</td>
+   <td> {{ item.prenom }}</td>
+    <td> {{ item.nb_mails }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+    </div>
+</div>
+
+
+
+
+
+
+
+    <br>
+<div class="bande-bas">
+    <!-- Texte dans la bande de couleur en bas -->
+    <div class="bande-bas-texte">© 2024 Université d'Angers</div>
+    <!-- Image en bas à droite -->
+    <img src="https://www.univ-angers.fr/_resource/Documents/DCOM/logo/VERTICAL/PAPIER/PNG/ua_v_couleur.png?download=true" alt="Logo UA">
+</div>
 
 </body>
 </html>
