--- a/Projet/monappli/templates/couples_employes.tmpl
+++ b/Projet/monappli/templates/couples_employes.tmpl
@@ -1,16 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Résultat de la requête</title>
+
+<style>
+       a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
+}
+
+/* Réinitialisation des marges par défaut de la page */
+body, html {
+    margin: 0;
+    padding: 0;
+    /* centrer le texte */
+    text-align: center;
+    font-size: 20px;
+
+}
+
+/* Style pour les images */
+img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
+
+
+
+        /* Style pour la bandeau de couleur */
+        .bande-couleur {
+            display: block;
+    width: 100%;
+    position: relative;
+    background-size: cover ;
+    background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+    padding: 30px 0px;
+        }
+    .bande-couleur img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
+
+     .bande-bas {
+
+    margin: 0;
+
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+
+            align-items: center;
+            padding: 30px 0px; /* Ajustez le rembourrage si nécessaire */
+            background-size: cover;
+            background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+            color: white; /* Couleur du texte */
+            font-family: Arial, sans-serif; /* Police du texte */
+        }
+
+        .bande-bas-texte {
+    flex-grow: 1; /* Permet au texte de remplir l'espace disponible */
+}
+
+        /* Style pour l'image en bas à droite */
+        .bande-bas img {
+                width: 5%; /* Ajustez la largeur de l'image si nécessaire */
+    height: auto; /* Ajustez la hauteur de l'image si nécessaire */
+    margin-left: auto; /* Pousse l'image vers la droite */
+        }
+
+
+
+
+      p { background: rgba(240, 240, 240, .5) ;
+       padding: 15px ;
+       width: 40em ;
+       font-style: italic ;
+       /* texte en gras */
+         font-weight: bold ;
+       margin-left: 19em ;
+       font-size: 18px;
+       background-image: url("https://img1.wallspic.com/crops/3/4/1/7/5/157143/157143-motif_vert_bleu-bleu_vert-green-la_purete_de_la_couleur-de_teintes_et_de_nuances-1920x1080.jpg");
+       background-size: cover; /* Pour ajuster la taille de l'image de fond */
+       background-position: center;
+       border-radius: 10px;
+       color: White;
+
+
+         }
+
+    div.envoi { text-align: center ;
+
+    }
+
+    h1 { font-size: 35px ;
+    font-weight: bold ;
+    }
+
+
+div.texte { font-size: 22px ;
+    margin-left: 170px ;
+    margin-right: 160px ;
+    text-align: left;
+    }
+
+
+    </style>
+
+<meta charset="utf-8">
+ <title>couple</title>
 </head>
-<body>
-    <h1>Résultat de la requête</h1>
+<body style="background-color:white;">
+
+
+<div class="bande-couleur">
+    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
+    <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
+</div>
+
+<img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
+    <br>
+
+
+
+    <h1> Nombre de mails échangés entre le {{ date_debut }} et le {{ date_fin }}</h1>
+
+    <br>
+
+
     <p>Ma date du début : {{ date_debut }}</p>
     <p>Ma date de fin : {{ date_fin }}</p>
     <p>Mon seuil : {{ seuil }}</p>
-    <p>Ma liste de couple : {{ couples }}</p>
+
+    <br>
+
+<table border="1", style="margin: 0 auto;">
+    <thead>
+        <tr>
+            <th>Nom</th>
+            <th>Prénom</th>
+            <th>Nom</th>
+            <th>Prénom</th>
+            <th>Nombre de mails</th>
+
+        </tr>
+    </thead>
+    <tbody>
+        {% for item in couples %}
+        <tr>
+            <td>{{ item.nom1 }}</td>
+            <td>{{ item.prenom1 }}</td>
+            <td>{{ item.nom2 }}</td>
+            <td>{{ item.prenom2 }}</td>
+            <td>{{ item.nb_mails }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+   <br>
+    <br>
+<div class="bande-bas">
+    <!-- Texte dans la bande de couleur en bas -->
+    <div class="bande-bas-texte">© 2024 Université d'Angers</div>
+    <!-- Image en bas à droite -->
+    <img src="https://www.univ-angers.fr/_resource/Documents/DCOM/logo/VERTICAL/PAPIER/PNG/ua_v_couleur.png?download=true" alt="Logo UA">
+</div>
+
 
 
 </body>
