--- a/Projet/monappli/templates/employeXmail.tmpl
+++ b/Projet/monappli/templates/employeXmail.tmpl
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <style>
-    a {
+
+       a {
     color: white;
+    text-decoration: none;
+    padding: 10px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
 }
 
 /* Réinitialisation des marges par défaut de la page */
@@ -17,76 +33,89 @@ body, html {
 
 }
 
+/* Style pour les images */
+img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
+
+
 
         /* Style pour la bandeau de couleur */
         .bande-couleur {
-            background-color: #272224; /* Couleur de fond */
-            width: 100%; /* Largeur de la bande */
-            height: 50px; /* Hauteur de la bande */
-            padding: 10px; /* Espacement interne pour un peu d'espace autour du contenu */
-            text-align: center; /* Centrage du texte à l'intérieur de la bande */
-            font-size: 24px; /* Taille de police */
+            display: block;
+    width: 100%;
+    position: relative;
+    background-size: cover ;
+    background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+    padding: 30px 0px;
+        }
+    .bande-couleur img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
 
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
+
+     .bande-bas {
+
+    margin: 0;
+
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+
+            align-items: center;
+            padding: 30px 0px; /* Ajustez le rembourrage si nécessaire */
+            background-size: cover;
+            background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
             color: white; /* Couleur du texte */
+            font-family: Arial, sans-serif; /* Police du texte */
         }
 
-        /* Style pour le bandeau vertical */
-        .bandeau-vertical1 {
-            background-color: #634E3D; /* Couleur de fond */
-            width: 150px; /* Largeur du bandeau */
-            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
-            position: fixed; /* Position fixe pour rester visible lors du défilement */
-            top: 0; /* Alignement en haut */
-            left: 0; /* Alignement à gauche */
-            text-align: center; /* Centrage du texte */
-            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
-            font-size: 20px; /* Taille de police */
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
-            /* Couleur du texte */
-            color: white;
-        }
-        /* Style pour le bandeau vertical */
-        .bandeau-vertical2 {
-            background-color: #634E3D; /* Couleur de fond */
-            width: 150px; /* Largeur du bandeau */
-            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
-            position: fixed; /* Position fixe pour rester visible lors du défilement */
-            top: 0; /* Alignement en haut */
-            right: 0; /* Alignement à droite */
-            text-align: center; /* Centrage du texte */
-            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
-            font-size: 20px; /* Taille de police */
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
-            /* Couleur du texte */
-            color: white;
+        .bande-bas-texte {
+    flex-grow: 1; /* Permet au texte de remplir l'espace disponible */
+}
+
+        /* Style pour l'image en bas à droite */
+        .bande-bas img {
+                width: 5%; /* Ajustez la largeur de l'image si nécessaire */
+    height: auto; /* Ajustez la hauteur de l'image si nécessaire */
+    margin-left: auto; /* Pousse l'image vers la droite */
         }
 
-      p, div.bouton { background: rgba(240, 240, 240, .5) ;
-       border: solid 1px ;
+
+
+
+      p {
        padding: 15px ;
        width: 40em ;
        font-style: italic ;
+       /* texte en gras */
+         font-weight: bold ;
        margin-left: 19em ;
        font-size: 18px;
-
+       background-image: url("https://img1.wallspic.com/crops/3/4/1/7/5/157143/157143-motif_vert_bleu-bleu_vert-green-la_purete_de_la_couleur-de_teintes_et_de_nuances-1920x1080.jpg");
+       background-size: cover; /* Pour ajuster la taille de l'image de fond */
+       background-position: center;
+       border-radius: 10px;
+       color: White;
          }
 
     div.envoi { text-align: center ;
-    width: 40em ;
-    margin-left: 40em ;
+
     }
 
     h1 { font-size: 35px ;
     font-weight: bold ;
-    text-decoration: underline;
     }
 
 
-div.texte { font-size: 20px ;
+div.texte { font-size: 22px ;
     margin-left: 170px ;
     margin-right: 160px ;
     text-align: left;
@@ -99,38 +128,16 @@ table.mon_tableau  {
         margin-right: auto;
     }
     table.mon_tableau td {
-       border: 2px solid #272224;
+       border: 2px solid black;
        padding: 0.3em;
        font-family: "Sans-serif";
        font-size: 20px;
 
     }
-    table.mon_tableau tr:nth-child(even)  {background: #F9E6D6  }
-    table.mon_tableau tr:nth-child(odd) {background: #F9E6D6 }
 
 
-    </style> <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load("current", {packages:["corechart"]});
-      google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Nom', 'Nombre de mails envoyés'],
-          {% for item in liste1 %}
-          ['{{ item.nom }} {{ item.prenom }}', {{ item.nb_mails_envoyes }}],
-          {% endfor %}
-        ]);
 
-        var options = {
-    title: 'Country Populations',
-    legend: { position: 'none' },
-    colors: ['green'],
-  };
-
-        var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
-        chart.draw(data, options);
-      }
-    </script>
+    </style>
 
 
  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -159,27 +166,51 @@ table.mon_tableau  {
         chart.draw(data, google.charts.Bar.convertOptions(options));
       }
     </script>
-<meta charset="utf-8">
- <title>Attributs d’un employé</title>
-</head>
+<meta charset="utf-8"></head>
 <body style="background-color:white;">
 
 
 <div class="bande-couleur">
-    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>  |
-    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a> |
-    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a> |
+    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
     <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
 </div>
+
+<img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
+    <br>
     <h1>Employés ayant envoyé ou reçu plus de {{ seuil }} mails</h1>
     <br>
     <p>Ma date du début : {{ date_debut }}</p>
     <p>Ma date de fin : {{ date_fin }}</p>
     <p>Mon seuil : {{ seuil }}</p>
 
+    <br>
+
+    <br>
+
+    <div class="texte">
+    Voici les principaux employés ayant envoyés/reçus plus de {{seuil}} mails entre le {{ date_debut }} et le {{ date_fin }}.
+
+</div>
+
+<br>
+
+<div class="row">
+    <div class="col-md-5 col-md-offset-1">
+        {{disp1|safe}}
+    </div>
+    <div class="col-md-5">
+        {{disp2|safe}}
+    </div>
+</div>
+
+<br>
+
+    <br>
     <br>
 
 <div class="texte">
@@ -190,15 +221,16 @@ table.mon_tableau  {
 </div>
 
     <br>
+    <br>
 
 <div style="display: flex;">
 <div style="flex: 1;">
 
     <table class="mon_tableau" style="margin-right: 40px;">
     <tr>
-    <td BGCOLOR="#634E3D"> Nom</td>
-    <td BGCOLOR="#634E3D"> Prénom</td>
-    <td BGCOLOR="#634E3D"> Nombre de mails</td>
+    <td > Nom</td>
+    <td > Prénom</td>
+    <td > Nombre de mails</td>
     </tr>
     {% for item in liste1 %}
     <tr>
@@ -216,9 +248,9 @@ table.mon_tableau  {
 <div style="flex: 1;">
     <table class="mon_tableau" style="margin-left: 40px;">
     <tr>
-    <td BGCOLOR="#634E3D"> Nom</td>
-    <td BGCOLOR="#634E3D"> Prénom</td>
-    <td BGCOLOR="#634E3D"> Nombre de mails</td>
+    <td> Nom</td>
+    <td> Prénom</td>
+    <td> Nombre de mails</td>
     </tr>
     {% for item in liste2 %}
     <tr>
@@ -231,8 +263,95 @@ table.mon_tableau  {
     </div>
 </div>
 
+<br>
+<br>
+<br>
 
-<div id="columnchart_material" style="width: 800px; height: 500px;"></div>
+<hr class="detail-separator" style="max-width: 600px; border-color : rgba(0, 0, 0, 1);">
+<br>
+
+
+<div class="texte">
+Voici les principaux employés ayant envoyés/reçus moins de {{seuil}} mails entre le {{ date_debut }} et le {{ date_fin }}.
+</div>
+<br>
+
+
+<div class="row">
+    <div class="col-md-5 col-md-offset-1">
+    {{disp3|safe}}
+     </div>
+    <div class="col-md-5">
+    {{disp4|safe}} </div>
+</div>
+
+<br>
+    <br>
+
+
+<div class="texte">
+    Voici le nombre de mails envoyés et reçus par chaque employé entre le {{ date_debut }} et le {{ date_fin }}.
+    <br>
+    Les employés ayant envoyé moins de {{ seuil }} mails sont affichés dans le tableau de gauche,
+    tandis que ceux ayant reçu moins de {{ seuil }} mails sont affichés dans le tableau de droite.
+</div>
+
+    <br>
+    <br>
+
+
+
+
+<div style="display: flex;">
+<div style="flex: 1;">
+
+    <table class="mon_tableau" style="margin-right: 40px;">
+    <tr>
+    <td > Nom</td>
+    <td > Prénom</td>
+    <td > Nombre de mails</td>
+    </tr>
+    {% for item in liste3 %}
+    <tr>
+    <td> {{ item.nom }}</td>
+   <td> {{ item.prenom }}</td>
+    <td> {{ item.nb_mails_envoyes }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+    </div>
+<br>
+<br>
+
+
+<div style="flex: 1;">
+    <table class="mon_tableau" style="margin-left: 40px;">
+    <tr>
+    <td> Nom</td>
+    <td> Prénom</td>
+    <td> Nombre de mails</td>
+    </tr>
+    {% for item in liste4 %}
+    <tr>
+    <td> {{ item.nom }}</td>
+   <td> {{ item.prenom }}</td>
+    <td> {{ item.nb_mails_recu }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+    </div>
+</div>
+
+
+<br>
+<br>
+
+<div class="bande-bas">
+    <!-- Texte dans la bande de couleur en bas -->
+    <div class="bande-bas-texte">© 2024 Université d'Angers</div>
+    <!-- Image en bas à droite -->
+    <img src="https://www.univ-angers.fr/_resource/Documents/DCOM/logo/VERTICAL/PAPIER/PNG/ua_v_couleur.png?download=true" alt="Logo UA">
+</div>
 
 </body>
 </html>
