--- a/Projet/monappli/templates/index.tmpl
+++ b/Projet/monappli/templates/index.tmpl
@@ -1,98 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-    a {
-    color: white; /* Couleur par défaut des liens */
+
+<style>
+       a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
 }
 
 /* Réinitialisation des marges par défaut de la page */
 body, html {
     margin: 0;
     padding: 0;
+    /* centrer le texte */
+    text-align: center;
+    font-size: 20px;
+
 }
+
+/* Style pour les images */
+img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
 
 
 
         /* Style pour la bandeau de couleur */
         .bande-couleur {
-            background-color: #272224; /* Couleur de fond */
-            width: 100%; /* Largeur de la bande */
-            height: 50px; /* Hauteur de la bande */
-            padding: 10px; /* Espacement interne pour un peu d'espace autour du contenu */
-            text-align: center; /* Centrage du texte à l'intérieur de la bande */
-            font-size: 24px; /* Taille de police */
+            display: block;
+    width: 100%;
+    position: relative;
+    background-size: cover ;
+    background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+    padding: 30px 0px;
+        }
+    .bande-couleur img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
 
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
+
+     .bande-bas {
+
+    margin: 0;
+
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+
+            align-items: center;
+            padding: 30px 0px; /* Ajustez le rembourrage si nécessaire */
+            background-size: cover;
+            background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
             color: white; /* Couleur du texte */
+            font-family: Arial, sans-serif; /* Police du texte */
         }
 
-        /* Style pour le bandeau vertical */
-        .bandeau-vertical1 {
-            background-color: #634E3D; /* Couleur de fond */
-            width: 150px; /* Largeur du bandeau */
-            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
-            position: fixed; /* Position fixe pour rester visible lors du défilement */
-            top: 0; /* Alignement en haut */
-            left: 0; /* Alignement à gauche */
-            text-align: center; /* Centrage du texte */
-            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
-            font-size: 20px; /* Taille de police */
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
-            /* Couleur du texte */
-            color: white;
+        .bande-bas-texte {
+    flex-grow: 1; /* Permet au texte de remplir l'espace disponible */
+}
+
+        /* Style pour l'image en bas à droite */
+        .bande-bas img {
+                width: 5%; /* Ajustez la largeur de l'image si nécessaire */
+    height: auto; /* Ajustez la hauteur de l'image si nécessaire */
+    margin-left: auto; /* Pousse l'image vers la droite */
         }
-        /* Style pour le bandeau vertical */
-        .bandeau-vertical2 {
-            background-color: #634E3D; /* Couleur de fond */
-            width: 150px; /* Largeur du bandeau */
-            height: 100%; /* Hauteur égale à la hauteur de la fenêtre */
-            position: fixed; /* Position fixe pour rester visible lors du défilement */
-            top: 0; /* Alignement en haut */
-            right: 0; /* Alignement à droite */
-            text-align: center; /* Centrage du texte */
-            padding-top: 20px; /* Espacement interne pour un peu d'espace autour du texte */
-            font-size: 20px; /* Taille de police */
-            font-weight: bold; /* Gras */
-            font-family: "Sans-serif"; /* Police de caractères */
-            /* Couleur du texte */
-            color: white;
-        }
+
+
+
+
+      p {
+      border: 2px red solid;
+       padding: 15px ;
+       width: 40em ;
+
+       margin-left: 19em ;
+       font-size: 18px;
+       border-radius: 10px;
+       text-align: left;
+
+
+
+         }
+
+    div.envoi { text-align: center ;
+
+    }
+
+    h1 { font-size: 35px ;
+    font-weight: bold ;
+    text-decoration: underline;
+    }
+
+
+div.texte { font-size: 22px ;
+    margin-left: 170px ;
+    margin-right: 160px ;
+    text-align: left;
+    }
+
+
     </style>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titre</title>
+<meta charset="utf-8">
+ <title>Attributs d’un employé</title>
 </head>
-<body style="background-color:#F9E6D6;">
+<body style="background-color:white;">
 
-<!-- Bandeau de couleur -->
+
 <div class="bande-couleur">
-    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>  |
-    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a> |
-    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a> |
-    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a> |
+    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
     <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
 </div>
 
-<!-- Bandeau vertical -->
-<div class="bandeau-vertical1"></div>
-<div class="bandeau-vertical2"></div>
-
+<img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
+    <br>
 <!-- Contenu de la page -->
-<p text-align: justify; style="margin-left: 160px; margin-right:160px; margin-top: 50px; padding: 20px;">
+<div class="texte">
+
 Contexte:
 L’affaire Enron (https://fr.wikipedia.org/wiki/Scandale_Enron) est connue comme l’un des plus
 grands cas de manipulation financière aux États-Unis. Parmi les diverses enquêtes judiciaires
 menées, la fouille des contenus des e-mails a constitué une piste essentielle pour comprendre la
 dynamique entre les différents acteurs et leur rôle dans l’affaire.
-</p>
+</div>
+    <br>
+    <br>
 
-<p text-align: justify; style="margin-left: 160px; margin-right:160px; margin-top: 50px; padding: 20px;">
+<div class="texte">
 Sujet:
 Il s’agit de développer une application destinée aux enquêteurs (non informaticiens). Elle doit
 leur proposer un jeu de formulaires leur permettant d’explorer, de visualiser et d’analyser les
@@ -101,10 +154,45 @@ de fixer différents paramètres de la requête ainsi que d’éventuelles optio
 est nécessaire ici de se glisser dans la peau d’un enquêteur pour imaginer quelles requêtes sont
 pertinentes, et quelles visualisations sont judicieuses. Toute réalisation allant au-delà du minimum
 requis se traduira par des points de bonus au niveau de la note finale
- </p>
+</div>
 
+    <br>
+    <br>
+Explication des requêtes disponible sur le site:
+<br>
+<br>
 
+<p>Requete 1: Affiche les attributs d’un employé (identité, catégorie, e-mails) en connaissant son nom ou
+l’une de ses adresses e-mail
 
+<br>
+<br>
+Requete 2: Affiche les employés ayant envoyé et/ou reçu plus que (resp. moins que) x mails dans un intervalle
+de temps choisit
+<br>
+<br>
+Requete 3: Affiche la liste des employés ayant communiqué avec un employé donné sur un intervalle de
+temps donné
+
+<br>
+<br>
+Requete 4: Affiche les couples d’employés ayant communiqué dans un intervalle de temps choisit
+<br>
+<br>
+Requete 5: Affiche les jours dans une période donnée ayant connu le plus grand nombre d’échanges de
+mails, on peut choisir d'afficher les echanges internes (entre employés de la même entreprise) ou externes ou les deux
+<br>
+<br>
+Requete 6: Afficher les mails contenant une liste de mots déterminés</p>
+
+    <br>
+    <br>
+<div class="bande-bas">
+    <!-- Texte dans la bande de couleur en bas -->
+    <div class="bande-bas-texte">© 2024 Université d'Angers</div>
+    <!-- Image en bas à droite -->
+    <img src="https://www.univ-angers.fr/_resource/Documents/DCOM/logo/VERTICAL/PAPIER/PNG/ua_v_couleur.png?download=true" alt="Logo UA">
+</div>
 
 </body>
 </html>
