--- a/Projet/monappli/templates/requete6.tmpl
+++ b/Projet/monappli/templates/requete6.tmpl
@@ -1,8 +1,121 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+<style>
+       a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
+}
+
+/* Réinitialisation des marges par défaut de la page */
+body, html {
+    margin: 0;
+    padding: 0;
+    /* centrer le texte */
+    text-align: center;
+    font-size: 20px;
+
+}
+
+/* Style pour les images */
+img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
+
+
+
+        /* Style pour la bandeau de couleur */
+        .bande-couleur {
+            display: block;
+    width: 100%;
+    position: relative;
+    background-size: cover ;
+    background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+    padding: 30px 0px;
+        }
+    .bande-couleur img {
+    display: block;
+    width: 7%;
+    height: 13%;
+    top : 0px ; left:0px;
+    position: absolute;}
+
+
+     .bande-bas {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+
+            align-items: center;
+            padding: 30px 0px; /* Ajustez le rembourrage si nécessaire */
+            background-size: cover;
+            background-image: url("https://st.depositphotos.com/1001564/2470/i/450/depositphotos_24704059-stock-photo-background.jpg");
+            color: white; /* Couleur du texte */
+            font-family: Arial, sans-serif; /* Police du texte */
+        }
+
+        .bande-bas-texte {
+    flex-grow: 1; /* Permet au texte de remplir l'espace disponible */
+}
+
+        /* Style pour l'image en bas à droite */
+        .bande-bas img {
+                width: 5%; /* Ajustez la largeur de l'image si nécessaire */
+    height: auto; /* Ajustez la hauteur de l'image si nécessaire */
+    margin-left: auto; /* Pousse l'image vers la droite */
+        }
+
+
+
+p {
+       padding: 15px ;
+       width: 40em ;
+       font-style: italic ;
+       /* texte en gras */
+         font-weight: bold ;
+       margin-left: 19em ;
+       font-size: 18px;
+       background-image: url("https://img1.wallspic.com/crops/3/4/1/7/5/157143/157143-motif_vert_bleu-bleu_vert-green-la_purete_de_la_couleur-de_teintes_et_de_nuances-1920x1080.jpg");
+       background-size: cover; /* Pour ajuster la taille de l'image de fond */
+       background-position: center;
+       border-radius: 10px;
+       color: White;
+
+
+         }
+
+    div.envoi { text-align: center ;
+
+    }
+
+    h1 { font-size: 35px ;
+    font-weight: bold ;
+    }
+
+
+div.texte { font-size: 20px ;
+    margin-left: 170px ;
+    margin-right: 160px ;
+    text-align: left;
+    }
+
+
+
+    </style>
+
+
     <title>Formulaire de mots</title>
     <script>
         function afficherChamps() {
@@ -21,30 +134,81 @@
         }
     </script>
 </head>
+
+<meta charset="utf-8">
+</head>
+<body style="background-color:white;">
+
+<div class="bande-couleur">
+
+    <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
+    <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
+</div>
+
+<img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
+
+
+
 <body>
-    <form action="{% url 'listemots' %}" method="post">
+    <form action="{% url 'Liste_mots' %}" method="post">
         {% csrf_token %}
 
         <br>
+        <h1>Recherche de mots dans les mails</h1>
 
         <div class="texte">
-            Cette page a été conçue pour trouver les mails contenant une liste de mots déterminés
+            Cette page a été conçue pour trouver les mails contenant une liste de mots déterminés, classés par destinataire ou expéditeur.
+            vous pouvez rentrer le nombre de mots que vous voulez rechercher, puis les rentrer un par un.
+
         </div>
 
         <br>
         <br>
         <br>
 
-        <div>
-            Rentrer le nombre de mots que vous voulez rentrer:
-            <input type="number" id="nbmot" name="nbmot" oninput="afficherChamps()">
-        </div>
+        Classer les mail par destinataire ou expediteur:
+        <p> Type de recherche:
+        <select name="choix">
+            <option value="destinataire">Destinataire</option>
+            <option value="expediteur">Expediteur</option>
+        </select>
+        </p>
+
+
+
+        Rentrer le nombre de mots que vous voulez rentrer:
+        <p>
+            Nombre de mots : <input type="number" id="nbmot" name="nbmot" oninput="afficherChamps()">
+        </p>
+
+
 
         <br>
 
-        <div id="champsMots">
+        <div id="champsMots" name="liste">
             <!-- Les champs de saisie seront affichés ici -->
         </div>
+
+        <br>
+
+<div class="envoi"><input type="submit" value="Rechercher"></div>
+ <br>
+    <br>
+
+
+
+    <br>
+<div class="bande-bas">
+    <!-- Texte dans la bande de couleur en bas -->
+    <div class="bande-bas-texte">© 2024 Université d'Angers</div>
+    <!-- Image en bas à droite -->
+    <img src="https://www.univ-angers.fr/_resource/Documents/DCOM/logo/VERTICAL/PAPIER/PNG/ua_v_couleur.png?download=true" alt="Logo UA">
+</div>
 
     </form>
 </body>
